Bug 313645 - The "export to svg" option is not working
Summary: The "export to svg" option is not working
Status: RESOLVED FIXED
Alias: None
Product: kturtle
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Cies Breijs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-21 18:14 UTC by Leonardo Barichello
Modified: 2013-01-23 01:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leonardo Barichello 2013-01-21 18:14:57 UTC
When you export to svg, the resulting file is not right.
At the first glance, it seems empty. But it has the expected content reduced and reflected.

After checking the source code of the resulting file, I realized that the problem is on the size of the canvas (the main object of the svg file).
Then, I took a look at the source code of kturtle and found out the solution: just uncomment the line 270 of canvas.cpp
I made some tests and everuthing seems to work fine!

Reproducible: Always

Steps to Reproduce:
1. Make some draw
2. Use the option Export to SVG
3. Open the SVG
Actual Results:  
A reduced (really really small) and reflected version of the actual draw

Expected Results:  
The actual draw.
Comment 1 Burkhard Lück 2013-01-22 04:21:34 UTC
I tested with master and can confirm the bug.

with 
-#	generator.setSize(_scene->sceneRect().size().toSize());   // Qt 4.5
+	generator.setSize(_scene->sceneRect().size().toSize());   // Qt 4.5
in canvas.cpp:#270

it works
Comment 2 Christoph Feck 2013-01-23 01:14:58 UTC
Git commit aa399f6fad3168c7ca73ecd01fc36012d1f48c01 by Christoph Feck.
Committed on 23/01/2013 at 02:08.
Pushed by cfeck into branch 'KDE/4.10'.

Fix SVG export

Some code was disabled, because it required
Qt 4.5, which we long assume.

Thanks Leonardo Barichello for spotting this!
FIXED-IN: 4.10

M  +3    -3    src/canvas.cpp

http://commits.kde.org/kturtle/aa399f6fad3168c7ca73ecd01fc36012d1f48c01
Comment 3 Christoph Feck 2013-01-23 01:20:19 UTC
Git commit db3e910e1ceeba30d4c5224953126a2a26549795 by Christoph Feck.
Committed on 23/01/2013 at 02:08.
Pushed by cfeck into branch 'master'.

Fix SVG export

Some code was disabled, because it required
Qt 4.5, which we long assume.

Thanks Leonardo Barichello for spotting this!
FIXED-IN: 4.10
(cherry picked from commit aa399f6fad3168c7ca73ecd01fc36012d1f48c01)

M  +3    -3    src/canvas.cpp

http://commits.kde.org/kturtle/db3e910e1ceeba30d4c5224953126a2a26549795