Fix SVG export

Some code was disabled, because it required
Qt 4.5, which we long assume.

Thanks Leonardo Barichello for spotting this!

BUG: 313645
FIXED-IN: 4.10